parser/tests/bad/stmt02.st
% 'result' statement can only appear in the body of 'function's

begin
  var i := 1
  result i
end
